--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: rgenoud
-Version: 1.25
-Date: 2004-03-03
+Version: 1.31
+Date: 2005-03-01
 Title: R version of GENetic Optimization Using Derivatives
 Author: Walter R. Mebane, Jr. <wrm1@cornell.edu>,
  Jasjeet Singh Sekhon <jasjeet_sekhon@harvard.edu> 
@@ -9,3 +9,4 @@ Depends: R (>= 1.7.1)
 Description: A genetic algorithm plus derivative optimizer
 License: GPL version 2 or newer
 URL: http://jsekhon.fas.harvard.edu/rgenoud/
+Packaged: Tue Mar  1 01:37:27 2005; jsekhon
