--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: rgenoud
-Version: 1.31
-Date: 2005-03-01
+Version: 2.15
+Date: 2005-09-25
 Title: R version of GENetic Optimization Using Derivatives
 Author: Walter R. Mebane, Jr. <wrm1@cornell.edu>,
- Jasjeet Singh Sekhon <jasjeet_sekhon@harvard.edu> 
-Maintainer: Jasjeet Singh Sekhon <jasjeet_sekhon@harvard.edu>
+ Jasjeet Singh Sekhon <sekhon@berkeley.edu> 
+Maintainer: Jasjeet Singh Sekhon <sekhon@berkeley.edu> 
 Depends: R (>= 1.7.1)
+Suggests: snow (>= 0.2-1)
 Description: A genetic algorithm plus derivative optimizer
 License: GPL version 2 or newer
-URL: http://jsekhon.fas.harvard.edu/rgenoud/
-Packaged: Tue Mar  1 01:37:27 2005; jsekhon
+URL: http://sekhon.polisci.berkeley.edu/rgenoud/
+Packaged: Sun Sep 25 04:09:49 2005; jsekhon
