--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: rgenoud
-Version: 2.17
-Date: 2005-11-24
+Version: 3.0-1
+Date: 2005-12-20
 Title: R version of GENetic Optimization Using Derivatives
 Author: Walter R. Mebane, Jr. <wrm1@cornell.edu>,
  Jasjeet Singh Sekhon <sekhon@berkeley.edu> 
@@ -10,4 +10,4 @@ Suggests: snow (>= 0.2-1)
 Description: A genetic algorithm plus derivative optimizer
 License: GPL version 2 or newer
 URL: http://sekhon.polisci.berkeley.edu/rgenoud/
-Packaged: Thu Nov 24 00:49:16 2005; jsekhon
+Packaged: Tue Dec 20 23:44:10 2005; jsekhon
