--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: rgenoud
-Version: 5.3-4
-Date: 2007-11-19
+Version: 5.4-7
+Date: 2007-01-04
 Title: R version of GENetic Optimization Using Derivatives
-Author: Walter R. Mebane, Jr. <wrm1@cornell.edu>,
+Author: Walter R. Mebane, Jr. <wmebane@umich.edu>,
  Jasjeet Singh Sekhon <sekhon@berkeley.edu> 
 Maintainer: Jasjeet Singh Sekhon <sekhon@berkeley.edu> 
 Depends: R (>= 2.0.0), utils
@@ -10,4 +10,4 @@ Suggests: snow (>= 0.2-1)
 Description: A genetic algorithm plus derivative optimizer
 License: GPL-3
 URL: http://sekhon.berkeley.edu/rgenoud/
-Packaged: Mon Nov 19 15:23:08 2007; sekhon
+Packaged: Fri Jan  4 23:08:32 2008; sekhon
