--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: rgenoud
-Version: 5.0-5
-Date: 2007-02-19
+Version: 5.1-9
+Date: 2007-03-23
 Title: R version of GENetic Optimization Using Derivatives
 Author: Walter R. Mebane, Jr. <wrm1@cornell.edu>,
  Jasjeet Singh Sekhon <sekhon@berkeley.edu> 
@@ -10,4 +10,4 @@ Suggests: snow (>= 0.2-1)
 Description: A genetic algorithm plus derivative optimizer
 License: GPL version 2 or newer
 URL: http://sekhon.berkeley.edu/rgenoud/
-Packaged: Mon Feb 19 23:46:42 2007; sekhon
+Packaged: Fri Mar 23 14:35:44 2007; jsekhon
