--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: rgenoud
-Version: 5.1-14
-Date: 2007-08-04
+Version: 5.3-3
+Date: 2007-10-18
 Title: R version of GENetic Optimization Using Derivatives
 Author: Walter R. Mebane, Jr. <wrm1@cornell.edu>,
  Jasjeet Singh Sekhon <sekhon@berkeley.edu> 
@@ -8,6 +8,6 @@ Maintainer: Jasjeet Singh Sekhon <sekhon@berkeley.edu>
 Depends: R (>= 2.0.0), utils
 Suggests: snow (>= 0.2-1)
 Description: A genetic algorithm plus derivative optimizer
-License: GPL3 as long as authorship of this code is made clear
+License: GPL-3
 URL: http://sekhon.berkeley.edu/rgenoud/
-Packaged: Sat Aug  4 00:01:46 2007; sekhon
+Packaged: Thu Oct 18 19:23:49 2007; sekhon
