--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,15 @@
 Package: rgenoud
-Version: 5.4-7
-Date: 2007-01-04
+Version: 5.5-1
+Date: 2009-03-13
 Title: R version of GENetic Optimization Using Derivatives
-Author: Walter R. Mebane, Jr. <wmebane@umich.edu>,
- Jasjeet Singh Sekhon <sekhon@berkeley.edu> 
-Maintainer: Jasjeet Singh Sekhon <sekhon@berkeley.edu> 
+Author: Walter R. Mebane, Jr. <wmebane@umich.edu>, Jasjeet Singh Sekhon
+        <sekhon@berkeley.edu>
+Maintainer: Jasjeet Singh Sekhon <sekhon@berkeley.edu>
 Depends: R (>= 2.0.0), utils
 Suggests: snow (>= 0.2-1)
 Description: A genetic algorithm plus derivative optimizer
 License: GPL-3
 URL: http://sekhon.berkeley.edu/rgenoud/
-Packaged: Fri Jan  4 23:08:32 2008; sekhon
+Packaged: Fri Mar 13 01:18:06 2009; sekhon
+Repository: CRAN
+Date/Publication: 2009-03-13 09:44:55
