--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: rgenoud
-Version: 5.5-1
-Date: 2009-03-13
+Version: 5.6-5
+Date: 2009-08-07
 Title: R version of GENetic Optimization Using Derivatives
 Author: Walter R. Mebane, Jr. <wmebane@umich.edu>, Jasjeet Singh Sekhon
         <sekhon@berkeley.edu>
@@ -10,6 +10,6 @@ Suggests: snow (>= 0.2-1)
 Description: A genetic algorithm plus derivative optimizer
 License: GPL-3
 URL: http://sekhon.berkeley.edu/rgenoud/
-Packaged: Fri Mar 13 01:18:06 2009; sekhon
+Packaged: 2009-08-07 07:05:54 UTC; sekhon
 Repository: CRAN
-Date/Publication: 2009-03-13 09:44:55
+Date/Publication: 2009-08-07 10:55:22
