--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: rgenoud
-Version: 5.7-8
+Version: 5.7-8.1
 Date: 2012-06-03
 Title: R version of GENetic Optimization Using Derivatives
 Author: Walter R. Mebane, Jr. <wmebane@umich.edu>, Jasjeet Singh Sekhon
@@ -10,6 +10,6 @@ Suggests: snow (>= 0.2-1)
 Description: A genetic algorithm plus derivative optimizer
 License: GPL-3
 URL: http://sekhon.berkeley.edu/rgenoud/
-Packaged: 2012-06-03 23:20:24 UTC; jas
+Packaged: 2013-02-08 09:22:00 UTC; ripley
 Repository: CRAN
-Date/Publication: 2012-06-04 06:06:40
+Date/Publication: 2013-02-08 12:19:41
