--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: rgenoud
-Version: 5.7-8.1
-Date: 2012-06-03
+Version: 5.7-9
+Date: 2013-05-06
 Title: R version of GENetic Optimization Using Derivatives
 Author: Walter R. Mebane, Jr. <wmebane@umich.edu>, Jasjeet Singh Sekhon
         <sekhon@berkeley.edu>
@@ -10,6 +10,7 @@ Suggests: snow (>= 0.2-1)
 Description: A genetic algorithm plus derivative optimizer
 License: GPL-3
 URL: http://sekhon.berkeley.edu/rgenoud/
-Packaged: 2013-02-08 09:22:00 UTC; ripley
+Packaged: 2013-05-06 23:20:17 UTC; sekhon
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-02-08 12:19:41
+Date/Publication: 2013-05-07 06:26:53
