--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,16 @@
 Package: rgenoud
-Version: 5.7-12
-Date: 2013-06-28
-Title: R version of GENetic Optimization Using Derivatives
-Author: Walter R. Mebane, Jr. <wmebane@umich.edu>, Jasjeet Singh Sekhon
-        <sekhon@berkeley.edu>
+Version: 5.7-12.4
+Date: 2015-07-19
+Title: R Version of GENetic Optimization Using Derivatives
+Author: Walter R. Mebane, Jr. <wmebane@umich.edu>,
+ Jasjeet Singh Sekhon <sekhon@berkeley.edu> 
 Maintainer: Jasjeet Singh Sekhon <sekhon@berkeley.edu>
-Depends: R (>= 2.15), utils, parallel
-Description: A genetic algorithm plus derivative optimizer
+Description: A genetic algorithm plus derivative optimizer.
+Depends: R (>= 2.15), utils
+Suggests: parallel
 License: GPL-3
 URL: http://sekhon.berkeley.edu/rgenoud/
-Packaged: 2013-06-28 09:33:03 UTC; jas
 NeedsCompilation: yes
+Packaged: 2015-07-20 00:50:19 UTC; jas
 Repository: CRAN
-Date/Publication: 2013-06-28 12:22:06
+Date/Publication: 2015-07-20 09:24:29
